[project]
name = "smolarith"
version = "0.1.0"
description = ""
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
dependencies = [
    "amaranth>=0.4.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]
markers = [
  "clks: tuple of clocks to register for simulator.",
  "module: top-level module to simulate."
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
doc = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
]

[tool.pdm.scripts]
test = "pytest"
test-doc = { composite =["doc-linkck", "_doc-test"] } 
doc = "sphinx-build doc/ doc/_build/"
_doc-test = "sphinx-build -b doctest doc/ doc/_build"
doc-linkck = "sphinx-build doc/ doc/_linkcheck/ -b linkcheck"
doc-auto = "sphinx-autobuild doc/ doc/_build/ --watch src/smolarith"
